--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -19,3 +19,5 @@ jobs:
           max_post_count: "4"
           remove_duplicates: true
           feed_list: "https://velog.io/@jelog_131/posts/rss"
+          user_agent: "Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)"
+          accept_header: "text/xml"
